# cpp_MNIST

./: CMakeLists.txt  activation.h  dataloader.cpp  dataloader.h  layer.cpp  layer.h  main  main.cpp  neuralnetwork.cpp  neuralnetwork.h
